[package]
name = "simplest-ovh-ddns-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.8.19"
serde = { version = "1.0.214", features = ["derive"] }
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
thiserror = "2.0.0"
regex = "1.11.1"
lazy_static = "1.5.0"

